--- a/MedicineGuru/app/build.gradle
+++ b/MedicineGuru/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true
     }
     buildTypes {
         release {
@@ -25,7 +26,21 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
+
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    //compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.firebaseui:firebase-ui-database:3.1.0'
+
+    compile 'com.google.firebase:firebase-auth:11.0.4'
+    compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.codemybrainsout.onboarding:onboarder:1.0.4'
+    compile 'com.firebaseui:firebase-ui-auth:3.1.0'
+    compile 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    apply plugin: 'com.google.gms.google-services'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
