Product List Activity Dependency
Include temporary product list activity dependency

--- a/MedicineGuru/app/src/main/AndroidManifest.xml
+++ b/MedicineGuru/app/src/main/AndroidManifest.xml
@@ -16,7 +16,6 @@
             android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -30,7 +29,8 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".InsertMedicineActivity"></activity>
+        <activity android:name=".InsertMedicineActivity" />
+        <activity android:name=".ProductList">
+        </activity>
     </application>
-
 </manifest>
