--- a/MedicineGuru/app/build.gradle
+++ b/MedicineGuru/app/build.gradle
@@ -26,21 +26,16 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-
-
-    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     //compile 'com.google.firebase:firebase-core:11.0.4'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.firebaseui:firebase-ui-database:3.1.0'
-
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.google.firebase:firebase-database:11.0.4'
     compile 'com.codemybrainsout.onboarding:onboarder:1.0.4'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.facebook.android:facebook-login:[4,5)'
+    compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
-    apply plugin: 'com.google.gms.google-services'
 }
-
-
 apply plugin: 'com.google.gms.google-services'
