--- a/MedicineGuru/app/build.gradle
+++ b/MedicineGuru/app/build.gradle
@@ -36,5 +36,9 @@ dependencies {
     compile 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.android.support:cardview-v7:25.0.1'
+    compile 'com.android.support:customtabs:25.0.1'
+    compile 'com.android.support:support-vector-drawable:25.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
