--- a/MedicineGuru/app/build.gradle
+++ b/MedicineGuru/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:3.1.0'
     compile 'com.google.firebase:firebase-auth:11.0.4'
     compile 'com.google.firebase:firebase-database:11.0.4'
+    compile 'com.google.firebase:firebase-storage:11.0.4'
     compile 'com.codemybrainsout.onboarding:onboarder:1.0.4'
     compile 'com.firebaseui:firebase-ui-auth:3.1.0'
     compile 'com.facebook.android:facebook-login:[4,5)'
