--- a/MedicineGuru/app/build.gradle
+++ b/MedicineGuru/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:customtabs:25.0.1'
     compile 'com.android.support:support-vector-drawable:25.0.1'
+    compile 'pl.droidsonroids.gif:android-gif-drawable:1.2.+'
+    compile 'com.github.bumptech.glide:glide:3.5.2'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
