--- a/MedicineGuru/app/src/main/AndroidManifest.xml
+++ b/MedicineGuru/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -30,9 +37,11 @@
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".InsertMedicineActivity" />
-        <activity android:name=".ProductList"></activity>
-        <activity android:name=".InsertMedicine"></activity>
+
+        <activity android:name=".ProductList" />
+        <activity android:name=".InsertMedicine" />
+
+
     </application>
 
 </manifest>
