--- a/MedicineGuru/app/src/main/AndroidManifest.xml
+++ b/MedicineGuru/app/src/main/AndroidManifest.xml
@@ -36,12 +36,9 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar" />
-
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".ProductList" />
         <activity android:name=".InsertMedicine" />
-
-
     </application>
 
 </manifest>
